@startuml AnaMenu
skinparam class {
    BackgroundColor White
    ArrowColor Red
    BorderColor Black
}

class HospitalSystem {
    + login(username: string, password: string) : boolean 
}

class Hasta {
    - isim : string
    - soyisim : string
    - tc : string
    - dogumTarihi : string
    - cinsiyet : string
    - telefon : string
    - email : string

    + randevuAl()
    + randevuIptal()
    + bilgiGuncelle()
    + randevuGecmisiGoruntule()
}

class Doktor {
        - isim : String
        - soyisim : String
        - tc : String
        - branþ : String
        - telefon : String

        + hastaGoruntule()
        + hastaEkle()
        + hastaSil()
        + hastaGüncelle()
        + randevuGoruntule()
        + randevuEkle()
        + randevuSil()
        + randevuGuncelle()
        + receteYaz()
        }

class Admin {
    

    + doktorEkle()
    + doktorSil()
    + doktorGuncelle()
    + hastaEkle()
    + hastaSil()
    + hastaGuncelle()
    + randevuEkle()
    + randevuSil()
    + randevuGuncelle()
    + receteYaz()
}

HospitalSystem -- Hasta : <<uses>>
HospitalSystem -- Doktor : <<uses>>
HospitalSystem -- Admin : <<uses>>
@enduml